@@ -440,7 +440,7 @@ USHORT hb_gtColorToN( char * szColorString )
 
    HB_TRACE(HB_TR_DEBUG, ("hb_gtColorToN(%s)", szColorString));
 
-   while( ( c = *szColorString++ ) == TRUE )
+   while( ( c = *szColorString++ ) != 0 )
    {
       c = toupper( c );
 
