@@ -1,3 +1,14 @@
+2001-06-04 16:15 UTC-0400 David G. Holm <dholm@jsd-llc.com>
+
+  * contrib/libnf/proper.c
+  * include/hbdefs.h
+  * samples\pe\editorlo.c
+  * source/compiler/genc.c
+  * source/rtl/gtapi.c
+    ! TRUE must never be declared as anything other than !0 and boolean
+      results must never be compared to any constant other than 0 when
+      overriding an implicit boolean test.
+
 2001-06-04 16:55 GMT+3 Alexander Kresin <alex@belacy.belgorod.su>
    * source/pp/pplib.c
      * __PreProcess() works now.
